--- a/package.json
+++ b/package.json
@@ -8,28 +8,31 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test": "vitest",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-netlify": "1.0.0-next.76",
-		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"mdsvex": "0.10.6",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"sass": "1.54.9",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "4.10.7",
-		"tslib": "^2.3.1",
-		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"@sveltejs/adapter-auto": "3.1.1",
+		"@sveltejs/adapter-netlify": "4.1.0",
+		"@sveltejs/kit": "2.5.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/eslint": "8.56.0",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"eslint": "8.56.0",
+		"eslint-config-prettier": "9.1.0",
+		"eslint-plugin-svelte": "^2.36.0-next.4",
+		"mdsvex": "0.11.0",
+		"prettier": "3.2.5",
+		"prettier-plugin-svelte": "3.2.1",
+		"sass": "1.70.0",
+		"svelte": "^5.0.0-next.54",
+		"svelte-check": "^3.6.0",
+		"tslib": "^2.4.1",
+		"typescript": "5.3.3",
+		"vite": "5.1.2",
+		"vitest": "1.2.2"
 	},
 	"type": "module"
 }
