--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@sveltejs/adapter-auto": "3.1.1",
 		"@sveltejs/adapter-netlify": "4.1.0",
 		"@sveltejs/kit": "2.5.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/vite-plugin-svelte": "3.0.0",
 		"@types/eslint": "8.56.0",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
@@ -27,7 +27,7 @@
 		"prettier": "3.2.5",
 		"prettier-plugin-svelte": "3.2.1",
 		"sass": "1.70.0",
-		"svelte": "^5.0.0-next.54",
+		"svelte": "5.0.0-next.55",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "5.3.3",
